# microshop

./: items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  depencies.py  schemas.py  views.py
core/models/: __init__.py  db_helper.py  product.py
users/: schemas.py
